--- a/css/wildefyr.css
+++ b/css/wildefyr.css
@@ -29,7 +29,6 @@ html, body {
     margin-right: auto;
     max-width: 910px;
 
-    overflow: auto;
     padding-bottom: 50px;
 }
 
@@ -54,6 +53,8 @@ html, body {
     box-shadow: 5px 5px 20px 1px #000;
     border: 1px solid #D7D7D7;
     padding: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     text-align: left;
 }
 
