--- a/css/wildefyr.css
+++ b/css/wildefyr.css
@@ -74,13 +74,25 @@ html, body {
 
 #footer {
     position: relative;
-    margin-top: -50px;
+    margin-top: -70px;
     height: 50px;
     clear: both;
     border-top: 1px solid #737373;
     width: 100%;
     font: sans-serif;
     text-align: center;
+}
+
+#footerBox {
+    display: block;
+    width: 100%;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 455px;
+    background-color: #14161A;
+    box-shadow: 5px 5px 20px 1px #000;
+    border: 1px solid #D7D7D7;
 }
 
 p {
