--- a/css/wildefyr.css
+++ b/css/wildefyr.css
@@ -1,7 +1,5 @@
 /* CSS WILDEFYR.NET */
 
-@import "bourbon";
-
 html, body {
     background-image: url("/media/noisier_net.png");
     height: 100%;
@@ -37,11 +35,12 @@ html, body {
     padding: 10px 20px;
     background-color: #14161A;
     border: 2px solid #737373;
-    color: #D7D7D7;
+    color: #737373;
     transition: all .3s;
 }
 
 #headerList a:hover {
+    color: #D7D7D7;
     border: 2px solid #D7D7D7;
     transition: all .4s;
 }
@@ -57,7 +56,6 @@ html, body {
 #content {
     font: sans-serif;
     margin-top: 40px;
-    /* overflow: auto; */
 }
 
 #textWrap {
