--- a/css/wildefyr.css
+++ b/css/wildefyr.css
@@ -105,9 +105,10 @@ html, body {
     font: monospace;
     box-shadow: 1px 1px 10px 1px #000;
     border-left: 5px solid #2E8B57;
-    display: inline-block;
     background-color: #111;
     text-align: left;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 #footer {
