cleanup media directory

--- a/css/wildefyr.css
+++ b/css/wildefyr.css
@@ -1,7 +1,7 @@
 /* CSS WILDEFYR.NET */
 
 html, body {
-    background-image: url("/media/noisier_net.png");
+    background-image: url("/resources/noisier_net.png");
     height: 100%;
 }
 
